@@ -35,6 +35,8 @@ export (QQ's a zone into a tarball)t
 Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
 (lots of major bugfixes too)
 tbaMUD 3.59
+[Feb 11 2009] - Jamdog
+  Fixed a crash bug in count_quests (quest.c) affecting zlist (thanks Fsantin)
 [Feb 05 2009] - Jamdog
   Added "set <player> name <newname>", which renames a character, including pfile and index entry
 [Feb 01 2009] - Jamdog
